fixed spacing/margin in regular classes page

--- a/artwebsite/src/RegularClasses.css
+++ b/artwebsite/src/RegularClasses.css
@@ -69,8 +69,8 @@
 .class-options-texts li{
   font-size: 20px;
   margin-bottom: 5px;
-  margin-right:30px;
-  margin-left: 20px;
+  margin-right:10px;
+  margin-left: 10px;
 }
 
 .class-options-location-boxes{
@@ -90,7 +90,7 @@
   border-radius: 8px;
   position: relative;
   font-size: 20px;
-  margin-left: 15px;
+  margin-left: 5px;
   margin-right: 15px;
 }
 
@@ -157,21 +157,29 @@
 
   .about-trials-content {
     flex-direction: column;
+    padding: 40px 10px;
   }
 
   .class-options-location-boxes {
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     margin-right: 50px;
+    margin-left:50px;
   }
 
   .button2 {
+    padding: 0px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     margin-top:5px;
     margin-bottom:5px;
-    width: 100%;
+    width: 150px;
+    text-align: center;
+    justify-content: center;
   }
 
-  .about-trials-pic {
+  .about-trials-picture {
     height: 300px;
     width: auto;
     margin-left: 0px;
@@ -183,5 +191,9 @@
     margin-right: 30px;
     margin-bottom: 50px;
     text-align: center;
+  }
+
+  .about-trials{
+    margin-right: 20px;
   }
 }
